--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - esgf-pyclient=0.3.1
+  - ipykernel=6.21.1
   - numpy=1.24.2
   - openssl=3.0.8
   - pip=23.0
