--- a/config.yaml
+++ b/config.yaml
@@ -4,8 +4,10 @@
 # ESGF Node Configuration
 esgf:
   myproxy_host: "esgf-node.ipsl.upmc.fr"
-  search_node: "http://esgf-data.dkrz.de/esg-search"
-  data_node_preference: "esgf.ceda.ac.uk"
+  #search_node: "http://esgf-data.dkrz.de/esg-search"       # Germany (dkrz)
+  #search_node: "http://esgf-node.ipsl.upmc.fr/esg-search"  # France (ipsl)
+  search_node: "https://esgf.nci.org.au/esg-search"         # Australia (nci)
+  data_node_preference: "esgf.nci.org.au" #"esgf.ceda.ac.uk"
 
 # Download Configuration
 download:
@@ -18,9 +20,13 @@ data:
   
   scenarios:
     #- "historical"
-    #- "ssp126"
-    #- "ssp585"
-    - "ssp534-over"
+    - "ssp126"
+    - "ssp585"
+    #- "ssp534-over"
+  
+  # If true, only download 2300 extensions for ssp126, ssp585, ssp534-over.
+  # Has no effect for any other experiment.
+  2300_extensions: true
   
   # Variables follow ESGF naming conventions
   variables:
@@ -33,15 +39,15 @@ data:
   
   # Specific model versions required – see ESGF web search tool for details
   models:
-    - "CESM2-WACCM"
-    - "IPSL-CM6A-LR"
-    - "MRI-ESM2-0"
-    - "ACCESS-ESM1-5"
-    - "CanESM5"
-    - "CNRM-ESM2-1"
-    - "MIROC-ES2L"
-    #- "ACCESS-CM2"
-    #- "UKESM1-0-LL"
+    #- "CESM2-WACCM"  # done
+    #- "IPSL-CM6A-LR" # done
+    #- "MRI-ESM2-0" # done
+    #- "ACCESS-ESM1-5" # done
+    #- "CanESM5" # done
+    - "EC-Earth3-Veg" # missing ssp126, 585
+    #- "MIROC-ES2L" # missing all
+    #- "CNRM-ESM2-1" # missing ssp126, 585
+    #- "UKESM1-0-LL" # done
 
 # Variable to Table ID Mapping
 # Amon - atmosphere, Omon - ocean, Lmon - land surface
@@ -59,6 +65,9 @@ table_mapping:
 variant_labels:
   default: "r1i1p1f1"
   UKESM1-0-LL: "r4i1p1f2"
+  MIROC-ES2L: "r1i1p1f2"
+  #CNRM-ESM2-1: "r1i1p1f2" # only for ssp534-over
+  #ACCESS-ESM1-5: "r1i1p1f2" # only for ssp534-over
 
 # Model Grid Labels  
 # Most models use 'gn' (native grid), but some require 'gr' (regridded to lat-lon)
@@ -66,4 +75,6 @@ variant_labels:
 # Enter custom grid labels for models here
 grid_labels:
   default: "gn"
-  #IPSL-CM6A-LR: "gr"   # atmosphere and land surface components only - ocean is on native grid
+  #IPSL-CM6A-LR: "gr"   # atmosphere and land surface components only
+  #CNRM-ESM2-1: "gr"     # atmosphere and land surface components only
+  EC-Earth3-Veg: "gr"   # atmosphere and land surface components only
