--- a/config.yaml
+++ b/config.yaml
@@ -6,8 +6,11 @@ esgf:
   myproxy_host: "esgf-node.ipsl.upmc.fr"
   #search_node: "http://esgf-data.dkrz.de/esg-search"       # Germany (dkrz)
   #search_node: "http://esgf-node.ipsl.upmc.fr/esg-search"  # France (ipsl)
-  search_node: "https://esgf.nci.org.au/esg-search"         # Australia (nci)
-  data_node_preference: "esgf.nci.org.au" #"esgf.ceda.ac.uk"
+  #search_node: "https://esgf.nci.org.au/esg-search"         # Australia (nci)
+  #search_node: "https://esg-dn1.nsc.liu.se/esg-search"       # Sweden (nsc)
+  search_node: "https://esgf-node.ornl.gov/esg-search"       # USA (llnl)
+
+  data_node_preference: "esgf-node.ornl.gov" #"esgf.ceda.ac.uk"
 
 # Download Configuration
 download:
@@ -21,8 +24,8 @@ data:
   scenarios:
     #- "historical"
     - "ssp126"
+    - "ssp534-over"
     - "ssp585"
-    #- "ssp534-over"
   
   # If true, only download 2300 extensions for ssp126, ssp585, ssp534-over.
   # Has no effect for any other experiment.
@@ -34,8 +37,8 @@ data:
     - "pr"        # precipitation
     - "evspsbl"   # evaporation and sublimation
     - "mrro"      # runoff
-    - "thetao"    # ocean potential temperature
-    - "so"        # ocean salinity
+    #- "thetao"    # ocean potential temperature
+    #- "so"        # ocean salinity
   
   # Specific model versions required – see ESGF web search tool for details
   models:
@@ -43,9 +46,10 @@ data:
     #- "IPSL-CM6A-LR" # done
     #- "MRI-ESM2-0" # done
     #- "ACCESS-ESM1-5" # done
+    #- "ACCESS-CM2"
     #- "CanESM5" # done
-    - "EC-Earth3-Veg" # missing ssp126, 585
-    #- "MIROC-ES2L" # missing all
+    #- "EC-Earth3-Veg" # done
+    - "MIROC-ES2L" # missing thetao, so
     #- "CNRM-ESM2-1" # missing ssp126, 585
     #- "UKESM1-0-LL" # done
 
@@ -69,12 +73,12 @@ variant_labels:
   #CNRM-ESM2-1: "r1i1p1f2" # only for ssp534-over
   #ACCESS-ESM1-5: "r1i1p1f2" # only for ssp534-over
 
-# Model Grid Labels  
-# Most models use 'gn' (native grid), but some require 'gr' (regridded to lat-lon)
-# Check ESGF search results if downloads fail - the model may need a different grid label
-# Enter custom grid labels for models here
+# Variable Grid Labels  
+# gn - native grid, gr - regridded to lat-lon
+# Check ESGF search results if downloads fail - the variable may need a different grid label
 grid_labels:
   default: "gn"
-  #IPSL-CM6A-LR: "gr"   # atmosphere and land surface components only
-  #CNRM-ESM2-1: "gr"     # atmosphere and land surface components only
-  EC-Earth3-Veg: "gr"   # atmosphere and land surface components only
+  # tas: "gr"
+  # pr: "gr"
+  # evspsbl: "gr"
+  # mrro: "gr"
